Enabled findbugs finally.